--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,7 +50,9 @@
 	"typeinfo": "cpp",
 	"cstring": "cpp",
 	"*.tpp": "c",
-	"list": "cpp"
+	"list": "cpp",
+	"map": "cpp",
+	"set": "cpp"
 },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
